@@ -1,5 +1,5 @@
 # Note: this file was auto-generated by Module::Build::Compat version 0.39_01
-require 5.006;
+require 5.008;
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
@@ -11,7 +11,9 @@ WriteMakefile
                  ],
   'VERSION_FROM' => 'lib/Config/Param.pm',
   'PREREQ_PM' => {
-                   'Test::More' => 0
+                   'Test::More' => 0,
+                   'File::Spec' => 0,
+                   'Storable' => 0
                  }
 )
 ;
